--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ h1 {
         <div class="col-5">
 
 	<label for="myFile">Please upload resume over here (as a .txt file only)</label>
-        <form action="./upload" method = "post" enctype = "multipart/form-data">
+        <form id = "uploadedForm" action="/action.php" method = "post" enctype = "multipart/form-data">
   	<input type="file" id="myFile" name="filename" autocomplete="off" accept = "application/pdf">
 	</form>
         
@@ -60,7 +60,7 @@ h1 {
 
         <div class="col-4">
 	<div class="row" style= "height:24px;"></div>
-        <button type="submit" class = "btn btn-primary"> 
+        <button type="submit" class = "btn btn-primary" form= "uploadedForm"> 
         Upload 
         </button>
     
@@ -70,24 +70,8 @@ h1 {
  
   
    
- <script>
-const form = document.getElementById('myFile');
-const formOne = document.getElementByClassName('btn btn-primary');
-formOne.addEventListener('submit', handleSubmit);
-
-// FUNCTIONS
-
-function handleSubmit(event){
-event.preventDefault();
-
-console.log(form)
-console.log(formOne)
-}
-
-
-
-
-</script>
+  <script src="script.js"></script>
+  
 </body>
 
 
