--- a/pageTwo.html
+++ b/pageTwo.html
@@ -4,23 +4,26 @@
 <meta charset = "UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 <link href= "https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"> 
-
+<script src="https://cdn.jsdelivr.net/npm/pdfjs-dist@2.0.943/build/pdf.min.js">  </script>
+<script src = "https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.6.347/pdf.min.js"></script>
 </head>
 <body>
     <h1>File Information</h1>
     <p id="fileName">File name will be displayed here</p>
-
+    
     <script>
-        // Retrieve the file name from localStorage
-        const fileName = localStorage.getItem("docName");
-
-        // Display the file name in the paragraph element
+        const fileName = sessionStorage.getItem("docName");
         const fileNameElement = document.getElementById('fileName');
-        if (fileName) {
-            fileNameElement.textContent = `Uploaded file name: ${fileName}`;
-        } else {
-            fileNameElement.textContent = 'No file uploaded';
+
+        if (fileName) 
+        { fileNameElement.textContent = `Uploaded file name: ${fileName}`;
         }
+        else 
+        {fileNameElement.textContent = 'No file uploaded';
+        }
+        
+
+
     </script>
 </body>
 
